notes.css
:root {
    --primary-color: #ffffff;
    --secondary-color: #2B2B2B;
}

.dark-mode {
    --primary-color: #2B2B2B;
    --secondary-color: #ffffff;
    transition-timing-function: ease-in-out;
    transition-duration: 1s;
}

#darkMode {
    transition-timing-function: ease-in-out;
    transition-duration: 1s;
}

body {
    background-color: var(--primary-color);
    transition-timing-function: ease-in-out;
    transition-duration: 1s;
}

.notes {
    border-color: #eb4336;
    border-width: thick;
    min-height: 35em;
    min-width: 30em;
    resize: both;
    overflow: auto;
    max-height: 475px;
    max-width: 785px;
}

.title {
    color: #4085f0;
    text-align: center;
    font-size: xx-large;
}

#colorPicker {
    margin-bottom: 15px;
    padding: 2px;
}

.save:hover {
    background-color: #eb4336;
}

.buttonMenu {
    max-width: 584px;
    margin: 0 auto;
}

.button, .save{
    color: var(--secondary-color);
    background-color: var(--primary-color);
    border: var(--secondary-color) solid 1px;
    padding: 7px;
    margin: 0.5px;
    transition-timing-function: ease-in-out;
    transition-duration: 1s;
}

.button:hover {
    background-color: #FABB29;
    cursor: pointer;
}

